--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "netflix-clone-basic",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server server.json -p 3333",
+    "tailwindcss": "npx tailwindcss -i ./src/global.css -o ./dist/output.css --watch"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -33,6 +37,7 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
