--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "tailwindcss": "npx tailwindcss -i ./src/global.css -o ./dist/output.css --watch"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "axios": "^1.6.2",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
@@ -23,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^7.23.0 || ^8.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -35,6 +38,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "postcss": "^8.4.32",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.6",
